--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,7 @@ edition = "2021"
 [dependencies]
 actix-files = "0.6.2"
 actix-web = "4.4.0"
+async-openai = "0.17.1"
 octocrab = "0.32.0"
 rusqlite = "0.30.0"
 serde = "1.0.192"
