--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,7 @@ edition = "2021"
 actix-files = "0.6.2"
 actix-web = "4.4.0"
 async-openai = "0.17.1"
+chrono = "0.4.34"
 octocrab = "0.32.0"
 rusqlite = "0.30.0"
 serde = "1.0.192"
